--- a/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxml
+++ b/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxml
@@ -16,7 +16,7 @@
           <view class="flex addNetwork">
             <view class="refuse" wx:if="{{item.status == 1}}">已为人脉</view>
             <view class="refuse" wx:if="{{item.status == 2}}">待验证</view>
-            <view class="addPersonBtn" wx:if="{{item.status == 0 || item.status == 3}}">加人脉</view>
+            <view class="addPersonBtn" wx:if="{{item.status == 0 || item.status == 3}}" catchtap="addPerson"  data-applyid = "{{item.user_id}}"  data-status="{{item.status}}">加人脉</view>
           </view>
         </view>
       </view>
