--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxml
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxml
@@ -7,100 +7,94 @@
 
 </view>
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:570px" bindchange="bindChange">
-  <!--申请查看我的项目  -->
+  <!--个人排名  -->
   <swiper-item>
-    <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply">
+    <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreThing">
       <view id="explain">排行规则：总人脉数（一级人脉+二级人脉）最多者</view>
       <view class="flex">
         <view class="littleBox">
-          <view class="number">222</view>
+          <view class="number">{{my_rank.one_level}}</view>
           <view class="ranking">一级人脉</view>
         </view>
         <view class="littleBox">
-          <view class="number">555</view>
+          <view class="number">{{my_rank.two_level}}</view>
           <view class="ranking">二级人脉</view>
         </view>
         <view class="littleBox">
-          <view class="number">900</view>
+          <view class="number">{{my_rank.rank}}</view>
           <view class="ranking">当前排名</view>
         </view>
       </view>
-      <view>
+      <block wx:for="{{rank_list}}" wx:key="{{index}}">
+       <view bindtap="goTo" data-applyid = "{{item.user_id}}">
         <view class="flex totalNum">
-          <view class="classname">top1</view>
+          <view class="classname">top{{item.rank}}</view>
           <view class="rightBox flex">
-            <view class="firstFriend">一级人脉：<label class="personNum">566</label> ，</view>
-            <view class="secondFriend">二级人脉：<label class="personNum">566</label></view>
+            <view class="firstFriend">一级人脉：<label class="personNum">{{item.one_level}}</label> ，</view>
+            <view class="secondFriend">二级人脉：<label class="personNum">{{item.two_level}}</label></view>
           </view>
         </view>
         <view class="flex infoBox">
           <view class="infoLeft">
-            <!-- <image src=""></image> -->
+            <image src="{{item.user_avatar_url}}" class="headPic" wx:if="{{item.user_avatar_url}}"></image>
+            <view class="others_nopic" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
           </view>
           <view class="infoCenter">
-            <view class="userName">姓名</view>
-            <view class="userCompany">公司</view>
-            <view class="userPosition">职位</view>
+            <view class="userName">{{item.user_real_name}}</view>
+            <view class="userCompany">{{item.user_company_name}}</view>
+            <view class="userPosition">{{item.user_company_career}}</view>
           </view>
           <view class="infoRight">
-            <view class="flex addNetwork">
-              <view class="refuse">已为人脉</view>
-              <!-- <view class="refuse">待验证</view>     -->
-              <!-- <view class="addPersonBtn">加人脉</view> -->
+            <view class="flex addNetwork"> 
+              <view class="refuse" wx:if="{{item.follow_status == 1}}">已为人脉</view>
+              <view class="refuse" wx:if="{{item.follow_status == 2}}">待验证</view>
+              <view class="addPersonBtn" wx:if="{{item.follow_status == 0 || item.follow_status == 3}}"  data-applyid = "{{item.user_id}}"  data-follow_status="{{item.follow_status}}"  catchtap="addPerson">加人脉</view>
             </view>
           </view>
         </view>
-      </view>
+       </view>
+      </block>
+      <view style="height:88rpx"></view>
     </scroll-view>
   </swiper-item>
-  <!--我申请查看的项目  -->
+  <!--战队排名  -->
   <swiper-item>
     <scroll-view bindscrolltolower="loadMore" scroll-top="{{scroll}}" scroll-y="true">
       <view id="explain">排行规则：总人脉数（一级人脉+二级人脉）最多者</view>
-      <view class="flex">
-        <view class="littleBox">
-          <view class="number">222</view>
-          <view class="ranking">一级人脉</view>
-        </view>
-        <view class="littleBox">
-          <view class="number">555</view>
-          <view class="ranking">二级人脉</view>
-        </view>
-        <view class="littleBox">
-          <view class="number">900</view>
-          <view class="ranking">当前排名</view>
-        </view>
-      </view>
-      <view>
-        <view class="flex totalNum">
-          <view class="classname">top1</view>
-          <view class="rightBox flex">
-            <view class="firstFriend">一级人脉：<label class="personNum">566</label> ，</view>
-            <view class="secondFriend">二级人脉：<label class="personNum">566</label></view>
+      <block wx:for="{{team_rank_list}}" wx:key="{{index}}" bindtap="allPerson">
+        <view bindtap="allPerson" data-id="{{item.team_id}}">
+          <view class="flex totalNum">
+            <view class="classname">top{{item.rank}}</view>
+            <view class="rightBox flex">
+              <view class="firstFriend">一级人脉：<label class="personNum">{{item.one_level}}</label> ，</view>
+              <view class="secondFriend">二级人脉：<label class="personNum">{{item.two_level}}</label></view>
+            </view>
           </view>
-        </view>
-        <view class="flex infoBox">
-          <view class="brandPic">
-            <!-- <image src=""></image> -->
-          </view>
-          <view class="infoCenter">
-            <view class="brandName">滴滴出行</view>
-            <view class="representativeName">代表人：<label>张三</label></view>
-          </view>
-          <view class="infoRight">
-            <view class="flex addNetwork">
-              <view class="refuse">已加入</view>
-              <!-- <view class="addPersonBtn">加战队</view> -->
+          <view class="flex infoBox">
+            <view class="brandPic">
+              <view class="team_others_nopic" wx:if="{{item.team_logo_text}}">{{item.team_logo_text}}</view>
+              <image src="{{item.team_logo_url}}" wx:if="{{item.team_logo_url}}" class="team_logo"></image>
+            </view>
+            <view class="infoCenter">
+              <view class="brandName">{{item.team_name}}</view>
+              <view class="representativeName">代表人：<label>{{item.team_founder}}</label></view>
+            </view>
+            <view class="infoRight">
+              <view class="flex addNetwork">
+                <view class="refuse" wx:if="{{item.follow_status == 1}}">已加入</view>
+                <view class="addPersonBtn" wx:if="{{item.follow_status == 0}}" catchtap="addTeam" data-team_id ="{{item.team_id}}" data-status="{{item.follow_status}}" >加战队</view>
+              </view>
             </view>
           </view>
         </view>
-      </view>
+      </block>
+      <view style="height:88rpx"></view>
     </scroll-view>
   </swiper-item>
 </swiper>
 <!--没有更多-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <view class="flex bottomBtn">
-<view class="backTo" bindtap="backTo">返回小程序</view>
-<view class="expandMyContacts" bindtap="expandMyContacts">扩展我的人脉</view>
+  <view class="backTo" bindtap="backTo">返回小程序</view>
+  <view class="expandMyContacts" bindtap="expandMyContacts">扩展我的人脉</view>
 </view>
