--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
@@ -9,7 +9,7 @@
   letter-spacing: 0;
   line-height: 80rpx;
   text-align: left;
-  padding-left:32rpx;
+  padding-left: 32rpx;
 }
 
 page {
@@ -74,7 +74,6 @@ page {
 .infoLeft {
   height: 122rpx;
   width: 122rpx;
-  background: yellow;
   border-radius: 50%;
   margin-right: 22rpx;
 }
@@ -158,7 +157,7 @@ page {
   color: #333;
   line-height: 32rpx;
   text-align: left;
-  margin-bottom:24rpx;
+  margin-bottom: 24rpx;
 }
 
 .representativeName {
@@ -167,31 +166,66 @@ page {
   line-height: 24rpx;
   text-align: left;
 }
-.brandPic{
-  height:120rpx;
-  background:pink;
-  width:120rpx;
-  margin-right:24rpx;
+
+.brandPic {
+  height: 120rpx;
+  width: 120rpx;
+  margin-right: 24rpx;
 }
-.backTo{
-width:376rpx;
-height:88rpx;
-text-align: center;
-line-height:88rpx;
-background:#ffffff;
-font-size:28rpx;
-color:#40587a;
+
+.backTo {
+  width: 376rpx;
+  height: 88rpx;
+  text-align: center;
+  line-height: 88rpx;
+  background: #fff;
+  font-size: 28rpx;
+  color: #40587a;
 }
-.expandMyContacts{
-background:#40587a;
-width:376rpx;
-height:88rpx;
-text-align: center;
-line-height:88rpx;
-font-size:28rpx;
-color:#ffffff;
+
+.expandMyContacts {
+  background: #40587a;
+  width: 376rpx;
+  height: 88rpx;
+  text-align: center;
+  line-height: 88rpx;
+  font-size: 28rpx;
+  color: #fff;
 }
-.bottomBtn{
+
+.bottomBtn {
   position: fixed;
   bottom: 0;
+}
+
+.others_nopic {
+  margin-top: 0;
+  font-size: 64rpx;
+  color: #40587a;
+  background: #f2f2f2;
+  border-radius: 50%;
+  line-height: 120rpx;
+}
+
+.headPic {
+  height: 122rpx;
+  width: 122rpx;
+  border-radius: 50%;
+  margin-right: 22rpx;
+  display: inline-block;
+  text-align: center;
+}
+
+.team_others_nopic {
+  height: 120rpx;
+  width: 120rpx;
+  margin-right: 24rpx;
+  text-align: center;
+  line-height: 120rpx;
+}
+
+.team_logo {
+  height: 120rpx;
+  width: 120rpx;
+  margin-right: 24rpx;
 }
