--- a/Weitianshi/pages/contactsActivty/activtyDetail/activtyDetail.wxml
+++ b/Weitianshi/pages/contactsActivty/activtyDetail/activtyDetail.wxml
@@ -1,9 +1,9 @@
 <view class="outBox">
   <image src="/img/compete.jpg" class="allPic"></image>
-  <view class="personTitleLeft">{{activtyData.user_relationship_count}}</view>
-  <view class="personTitleRight">{{activtyData.user_count}}</view>
-  <view class="teamTotalLeft">{{activtyData.team_relationship_count}}</view>
-  <view class="teamTotalRight">{{activtyData.team_count}}</view>
+  <view class="personTitleLeft">{{activtyData.user_count}}</view>
+  <view class="personTitleRight">{{activtyData.user_relationship_count}}</view>
+  <view class="teamTotalLeft">{{activtyData.team_count}}</view>
+  <view class="teamTotalRight">{{activtyData.team_relationship_count}}</view>
 </view>
 <view class="flex bottomBtn">
   <view class="Connections " data-url='/pages/contactsActivty/topPlayer/topPlayer' bindtap="enroll"  >人脉排行</view>
