--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
@@ -10,6 +10,9 @@
   line-height: 80rpx;
   text-align: left;
   padding-left: 32rpx;
+  position: fixed;
+  top:0;
+  z-index: 99;
 }
 
 page {
@@ -77,7 +80,21 @@ page {
   border-radius: 50%;
   margin-right: 22rpx;
 }
-
+.swiper-box .infoCenter .userName{
+    text-align: left;
+}  
+.swiper-box .infoCenter .userCompany{
+    text-align: left;
+}  
+.swiper-box .infoCenter .userPosition{
+    text-align: left;
+}  
+.swiper-box .infoCenter .brandName{
+    text-align: left;
+}  
+.swiper-box .infoCenter .representativeName{
+    text-align: left;
+}  
 .userName {
   font-size: 32rpx;
   color: #333;
