--- a/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxss
+++ b/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxss
@@ -11,6 +11,10 @@
   line-height: 32rpx;
   text-align: left;
   margin-bottom: 24rpx;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 408rpx;
 }
 
 .userCompany, .userPosition {
@@ -19,6 +23,10 @@
   line-height: 24rpx;
   text-align: left;
   margin-bottom: 16rpx;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 408rpx;
 }
 
 .infoBox {
@@ -26,7 +34,7 @@
   background: #fff;
   padding: 32rpx;
   position: relative;
-  margin-bottom:30rpx;
+  margin-bottom: 30rpx;
 }
 
 .refuse {
@@ -59,6 +67,7 @@
   right: 32rpx;
   top: 68rpx;
 }
+
 .user_image {
   width: 120rpx;
   height: 120rpx;
@@ -79,4 +88,19 @@
   margin-right: 16rpx;
   border-radius: 50%;
   text-align: center;
+}
+.empty {
+  padding-top: 0;
+  margin-top:344rpx;
+  width: 252rpx;
+  height: 190rpx;
+}
+.hasNothing{
+  color:#666666;
+}
+.noData {
+  width: 144rpx;
+  height: 88rpx;
+  margin-bottom: 38rpx;
+  /* margin-top:344rpx; */
 }
