--- a/Weitianshi/pages/contactsActivty/expandContacts/expandContacts.wxml
+++ b/Weitianshi/pages/contactsActivty/expandContacts/expandContacts.wxml
@@ -1,1 +1,1 @@
-<image  src="/img/activtyContent.jpg" class="pic"></image>
+<image  src="http://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/activtyContent.jpg" class="pic"></image>
