--- a/Weitianshi/pages/contactsActivty/activtyDetail/activtyDetail.wxml
+++ b/Weitianshi/pages/contactsActivty/activtyDetail/activtyDetail.wxml
@@ -1,5 +1,5 @@
 <view class="outBox">
-    <image src="/img/compete.jpg" class="allPic"></image>
+    <image src="http://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/compete.jpg" class="allPic"></image>
     <view class="personTitleLeft">{{activtyData.user_count}}</view>
     <view class="personTitleRight">{{activtyData.user_relationship_count}}</view>
     <view class="teamTotalLeft">{{activtyData.team_count}}</view>
