--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -651,27 +651,8 @@
           </view>
         </view>
       <view>
-        <view class="describe" wx:if="{{item.resource.res_desc != ''}}">{{item.resource.res_desc}}</view>
+        <view class="describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
       </view>
-        <!-- <view class="flex bottomTab">
-          <view class="flex refuseBox" bindtap="btn" data-record="{{item.user_id}}" data-status="{{1}}">
-            <image src="/img/icon-tuisongxiangmu@2x.png" class="iconFreeStyle"></image>
-            <view class="refuseBtn">推送项目</view>
-          </view>
-          需要进行判断 0:不是当前用户人脉1.当前用户的人脉2.待验证3.同意加为人脉
-          <view class="flex agreeBox" bindtap="btn" data-record="{{item.user_id}}" data-status="{{2}}" wx:if="{{item.follow_status == 0}}">
-            <image src="/img/icon-jiarenmai@2x.png" class="iconFreeStyle"></image>
-            <view class="agreeBtn" >加人脉</view>
-          </view>
-          <view class="flex agreeBox"  wx:if="{{item.follow_status == 1}}">
-            <image src="/img/icon-huweirenmai@2x.png" class="iconFreeStyle"></image>
-            <view class="connectionBtn">互为人脉</view>
-          </view>
-           <view class="flex agreeBox"  wx:if="{{item.follow_status == 2}}">
-            <image src="/img/icon-daiyanzheng@2x.png" class="iconFreeStyle"></image>
-            <view class="connectionBtn">待验证</view>
-          </view>
-        </view> -->
       </view>
     </view>
 
