--- a/Weitianshi/pages/my/projectShop/projectSearch/projectSearch.wxml
+++ b/Weitianshi/pages/my/projectShop/projectSearch/projectSearch.wxml
@@ -1,2 +1,52 @@
-<!--pages/my/projectShop/projectSearch/projectSearch.wxml-->
-<text>pages/my/projectShop/projectSearch/projectSearch.wxml</text>
+<import src="/pages/Template/Template.wxml" />
+<view class="search_frame">
+  <label class="searchBox flex">
+    <input class="search" placeholder="请输入项目介绍、项目名称、公司" bindinput="searchSth" />
+  </label>
+  <view class="esc" bindtap="searchEsc">取消</view>
+</view>
+<scroll-view scroll-y="true" bindscrolltolower="loadMore" scroll-top="{{scroll}}">
+  <block wx:for="{{list}}" wx:key="{{index}}">
+    <view class="outBox">
+      <view class="insideBox">
+        <view data-project="{{item.project_id}}" catchtap="projectDetail">
+          <view class="flex">
+            <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+            <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
+          </view>
+          <view class="allIndustry" style="text-align:left">
+            <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+              <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
+              <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+            </block>
+          </view>
+          <view class="allProjectDetail flex" wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+            <view class="{{item.pro_scale.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
+            <view class="{{item.pro_finance_stock_after.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
+            <view class="{{item.pro_stage.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
+            <view class="{{item.pro_area.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
+          </view>
+          <view class="flex otherInfo">
+            <view>
+              <image src="{{item.user.investor_logo_url}}" class="others_pic" wx:if="{{item.user.investor_logo_url}}" />
+              <view class="flex user_image" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+            </view>
+            <view>
+              <view class="flex userInfo">
+                <view class="userName">{{item.user.user_name}}</view>
+                <view class="userCareer">{{item.user.user_career}}</view>
+                <view class="userCompany" style="text-align:left">{{item.user.user_company}}</view>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
+  </block>
+  <view class="highBox"></view>
+</scroll-view>
+<view class="emptyBox"></view>
+<view class="saveCompanyName" bindtap="save">保存</view>
+<!--没有更多-->
+<view class="error" wx:if="{{error==1}}">{{error_text}}</view>
